[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maxsmart"
version = "2.0.4"
description = "A comprehensive Python library for controlling Revogi-based Max Hauri MaxSmart PowerStrips and Smart Plugs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Superkikim", email = "your-email@example.com"}
]
maintainers = [
    {name = "Superkikim", email = "your-email@example.com"}
]
keywords = ["maxsmart", "revogi", "smart", "plug", "power", "strip", "home", "automation", "iot"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"
dependencies = [
    "aiohttp>=3.8.0",
    "getmac>=0.9.5" 
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "mypy>=0.991"
]
examples = [
    "matplotlib>=3.5.0"
]

[project.urls]
Homepage = "https://github.com/superkikim/maxsmart"
Documentation = "https://github.com/superkikim/maxsmart/blob/main/README.md"
Repository = "https://github.com/superkikim/maxsmart.git"
"Bug Tracker" = "https://github.com/superkikim/maxsmart/issues"
Changelog = "https://github.com/superkikim/maxsmart/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["maxsmart", "maxsmart.device"]
include-package-data = true

[tool.setuptools.package-data]
maxsmart = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
force_sort_within_sections = true
combine_as_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "--asyncio-mode=auto"
]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false